# rev2

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
build-aux/: .gitignore  git-version
lib/: Makefile.am
src/: .gitignore  Makefile.am  rev2.cc  rev2.cpp  splitter.cpp  splitter.hpp  splitter_test.cpp
